syntax = "proto3";

package proto.api.v1;

option go_package = "simple-connect/gen/proto/api/v1;apiv1";

import "google/protobuf/timestamp.proto";

message BaseUser {
    string id = 1;
}

message ReadUser {
    string id = 1;
    string email = 2;
    google.protobuf.Timestamp created_at = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string id = 1;
}

message MeRequest {

}

service AuthService {
}

service ProtectedAuthService {
    rpc Me(MeRequest) returns (ReadUser) {};
}